# parcel-delivery-api

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ROADMAP-PRODUCTION.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.claude/rules/common/: coding-style.md  database.md  dependencies.md  documentation.md  error-handling.md  git-workflow.md  linting.md  security.md  testing.md
.claude/rules/python/: conventions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0c8ee6e20a41_seed_parcel_types.py  45dd304438ec_init.py  a1b2c3d4e5f6_float_to_decimal.py  b2c3d4e5f6a7_add_check_constraints.py  c3d4e5f6a7b8_add_user_table_and_user_id.py  d4e5f6a7b8c9_add_refresh_tokens_and_roles.py
app/: __init__.py  main.py  scheduler_main.py  version.py
app/api/: __init__.py  auth.py  deps.py  errors.py  examples.py  health.py  parcel.py  parcel_type.py  parcel_types.py  parcels.py
app/core/: __init__.py  cache.py  exceptions.py  logger.py  metrics.py  openapi.py  rate_limit.py  security.py  sentry.py  settings.py
app/db/: __init__.py  base.py  deps.py  session.py
app/middlewares/: __init__.py  session.py
app/models/: __init__.py  parcel.py  parcel_type.py  refresh_token.py  user.py
app/redis/: client.py
app/redis_client/: __init__.py  client.py
app/schemas/: __init__.py  auth.py  common.py  parcel.py  parcel_type.py
app/services/: __init__.py  auth.py  base.py  parcel.py  parcel_type.py  rates.py
app/tasks/: __init__.py  delivery.py  routes.py  scheduler.py
docker/mysql/: mysql.cnf
docker/prometheus/: prometheus.yml
docker/redis/: redis.conf.tpl
docker/scripts/: wait-for-services.sh
docs/: ARCHITECTURE.md  AUTH_RELEASE_PLAN.md  INSTALLATION.md  TESTING.md  USAGE.md
scripts/: smoke_test.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_auth_api.py  test_check_constraints.py  test_health_api.py  test_parcel_api.py  test_parcel_type_api.py  test_rate_limiting.py  test_session_middleware.py
tests/unit/: __init__.py  conftest.py  test_auth_api.py  test_cache.py  test_deps.py  test_metrics.py  test_openapi.py  test_parcel_schema.py  test_rate_limit.py  test_redis_client.py  test_scheduler_main.py  test_security.py  test_sentry.py
tests/unit/services/: test_auth_service.py  test_base_service.py  test_get_usd_rub_rate.py  test_parcel_service.py
tests/unit/tasks/: test_delivery_job.py  test_scheduler.py
