[project]
name = "parcel-delivery-api"
version = "0.1.0"
description = "REST API for parcel registration, tracking and delivery cost calculation"
authors = [
    {name = "Aksenov Roman",email = "aksenov.nsk.r.a@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi>=0.115.12,<1.0.0",
    "uvicorn[standard]>=0.34.2,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.41,<3.0.0",
    "aiomysql>=0.2.0,<1.0.0",
    "alembic>=1.16.1,<2.0.0",
    "pydantic>=2.11.5,<3.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
    "pymysql>=1.1.1,<2.0.0",
    "tenacity>=9.1.2,<10.0.0",
    "apscheduler>=3.11.0,<4.0.0",
    "redis>=5.0.0,<8.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "bcrypt>=4.0.0,<6.0.0",
    "email-validator>=2.0.0,<3.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.11.0"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-asyncio = ">=0.24.0,<1.0.0"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "UP046"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
markers = [
    "unit: unit tests (no external dependencies)",
    "integration: integration tests (requires DB and Redis)",
]
