[project]
name = "parcel-delivery-api"
version = "1.0.0"
description = "REST API for parcel registration, tracking and delivery cost calculation"
authors = [
    {name = "Aksenov Roman",email = "aksenov.nsk.r.a@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14, <4.0"
dependencies = [
    "fastapi>=0.136.3,<1.0.0",
    "uvicorn[standard]>=0.48.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.50,<3.0.0",
    "aiomysql>=0.3.2,<1.0.0",
    "alembic>=1.18.4,<2.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "pymysql>=1.2.0,<2.0.0",
    "tenacity>=9.1.4,<10.0.0",
    "apscheduler>=3.11.2,<4.0.0",
    "redis>=8.0.0,<9.0.0",
    "limits>=5.8.0,<6.0.0",
    "PyJWT>=2.13.0,<3.0.0",
    "bcrypt>=4.0.0,<6.0.0",
    "email-validator>=2.0.0,<3.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
    "sentry-sdk[fastapi]>=2.61.0,<3.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = ">=0.11.0"
mypy = ">=2.1.0,<3.0.0"
pre-commit = "^4.2.0"
pytest = ">=9.0.3,<10.0.0"
pytest-asyncio = ">=1.4.0,<2.0.0"
bandit = {version = ">=1.8.0,<2.0.0", extras = ["toml"]}
pytest-cov = "^7.1.0"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C90", "PT", "D", "ANN"]
ignore = ["B008", "UP046"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_any_generics = true
no_implicit_optional = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
markers = [
    "unit: unit tests (no external dependencies)",
    "integration: integration tests (requires DB and Redis)",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "alembic"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
